Fixed Icons not showing

--- a/src/ui/components/App.css
+++ b/src/ui/components/App.css
@@ -51,3 +51,8 @@ h3{
     justify-content: space-between;
     align-items: center;
 }
+
+.table-icon {
+    background: url(../../images/table_green.png);
+    
+}
